xwayland: Guard  against offers arriving after leaving surface

If the XdndEnter message is handled after leaving the current
wayland surface m_visit will be null.
BUG:449644